First full iteration
Se re-escribe todo el contenido, incluyendo
nuevas listas de skills y la plantilla preparada
para editar los proyectos.

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -277,6 +277,12 @@ html, body {
     text-transform: uppercase;
 }
 
+.section-portfolio h4 {
+    font-size: 20px;
+    margin: 0;
+    text-transform: uppercase;
+}
+
 .img-lines {
     margin: 15px 0 40px;
 }
