--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -212,9 +212,9 @@ html, body {
 ================================================== */
 .hero { 
     background: url(../img/hero.jpg) no-repeat center / cover; 
-    height: 100%;
+    height: 10%;
     width: 100%;
-    min-height: 700px;
+    min-height: 100px !important;
 }
 
 .hero .container {
@@ -320,7 +320,7 @@ html, body {
 
 .section-services:before {
     content: '';
-    background: url(../img/services-bg.jpg) no-repeat fixed center / cover;
+    background: url(../img/ama-nippon-bg.jpg) no-repeat fixed center / cover;
     width: 100%;
     height: 400px; 
     position: absolute;
@@ -449,6 +449,10 @@ html, body {
     box-shadow: 0px 0px 40px 8px rgba(0, 0, 0, 0.2);
 }
 
+.modal-content h5 {
+    font-weight: 700;
+}
+
 .modal-header {
     position: relative;
     padding: 0;
@@ -487,7 +491,7 @@ html, body {
 
 /* Section: Counters */
 .section-counters {
-    background: url(../img/counters-bg.jpg) no-repeat fixed center / cover;
+    background: url(../img/sahun-bg.jpg) no-repeat fixed top / cover;
     width: 100%;
     padding: 100px 0;
     position: relative;
